# silvercare-ai-assistant

./: .gitignore  README.md  build.gradle  package.json  settings.gradle
.github/workflows/: android-tests.yml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  silvercare_mnn_runtime.cpp  silvercare_mnn_runtime_stub.cpp
docs/: diagnostic-logging-zh.md  functional-architecture-zh.md  ios-android-parity-checklist.md  offline-ai-conversation-capabilities.md  user-testing-feedback-2026-06.md  user-testing-feedback-structured.json
ios/: MIGRATION_STATUS.md  Package.swift  README.md  project.yml
ios/Native/: README.md  SilverCareMNNTTSRuntimeABI.h
ios/SilverCareiOS/: Info.plist
ios/SilverCareiOS.xcodeproj/: project.pbxproj
ios/SilverCareiOSTests/: RuntimeStatusSnapshotStoreTests.swift
ios/Tools/: build_mnn_runtime_wrapper.sh  build_mnn_tts_runtime_wrapper.sh  embed_native_runtime_artifacts.sh  embed_private_dashscope_config.sh  install_dashscope_key_to_keychain.sh  install_vosk_runtime_artifact.sh  run_device_smoke.sh  run_device_ui_debug.sh  run_simulator_automation.sh  verify_core.swift
public_benchmark_silvercare/: README.md  package.json
tools/: check-ios-benchmark-reports.mjs  check-ios-bridge.mjs  check-ios-device-smoke-summary.mjs  check-ios-device-ui-summary.mjs  check-ios-migration-verification-summary.mjs  check-ios-native-runtime.mjs  check-ios-online-chain.mjs  check-ios-parity-surface.mjs  check-ios-permissions.mjs  check-ios-tts-playback.mjs  check-js.mjs  check-live-dashscope-scenarios.mjs  check-no-sensitive-secrets.mjs  run-ios-migration-verification.mjs  run-live-dashscope-scenarios.mjs
(+145 files in other folders)
